<resources>
    <string name="app_name">Product Scanner</string>

    <string name="title_barcode_scanner">Scanner coduri de bare</string>

    <string name="btn_camera">Camera</string>

    <string name="btn_gallery">Galerie</string>

    <string name="btn_crop">Decupeaza</string>

    <string name="btn_scan">Scaneaza</string>

    <string name="label_product">Produs:</string>

    <string name="label_barcode">Cod de bare:</string>

    <string name="label_health_score">Scor de sanatate:</string>

    <string name="label_result">Rezultat:</string>

    <string name="msg_no_codes">Nu a fost gasit niciun cod lizibil sau compatibil.</string>

    <string name="msg_no_ean_upc">Imaginea nu contine coduri EAN/UPC.</string>

    <string name="product_name_format">Produs: %1$s</string>

    <string name="health_score_format">Scor de sanatate: %1$d / 100 (%2$s)</string>

    <string name="result_barcode_format">Cod de bare: %1$s</string>

    <string name="result_category_title">Categoria:</string>

    <string name="result_compare_title">Comparativ:</string>

    <string name="health_level_healthy">Sanatos</string>

    <string name="health_level_moderate">Moderat</string>

    <string name="health_level_unhealthy">Nesanatos</string>

</resources>